# watts-next

./: .gitignore  .gitmodules  README.md  docker-compose.local.yml  pyproject.toml
watts_next/: data.py  evaluate.py  request.py  utils.py
watts_next/feature_pipeline/: base.py  generator.py  ghsl.py  processor.py
watts_next/models/: baseline.py  boosting.py  prophet.py
watts_next/preprocess/: calendar.py  nan.py
